Fix icon column alignment; swap icons in sidebar

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -216,13 +216,21 @@
   }
 
   li {
+    padding: 2px 5px;
+    margin-bottom: 5px;
     white-space: nowrap;
+  }
+
+  i, .ai {
+    display: inline-block;
+    width: 1.25em;
+    text-align: center;
+    vertical-align: middle;
   }
 
   a {
     display: block;
-    margin-bottom: 5px;
-    padding: 2px 5px;
+    padding: 0;
     border-radius: $border-radius;
     color: inherit;
     font-size: $type-size-5;
